# samp-plugin-mapandreas

./: .gitignore  CMakeLists.txt  DEPS  README.md  makefile  mapandreas.inc  pawn.json  test.pwn
include/: mapandreas.inc
src/: CMakeLists.txt  MapAndreas.cpp  MapAndreas.h  MapAndreas.hpp  main.cpp  natives.cpp  natives.h  natives.hpp  plugin.cpp  plugin.def
test/: samp.json
test/scriptfiles/: .gitignore
